mounted the tick chart on git card allowing tooltip and download svg and png functions, reduced white space on gitcard, fixed a mutating prop bug in horizontal bar chart

--- a/frontend/app/styles/augur.styl
+++ b/frontend/app/styles/augur.styl
@@ -381,7 +381,7 @@ cite.metric a
   max-height: 0px !important
 
 .lines-of-code-table th,.lines-of-code-table td
-  padding: 0.5rem
+  padding: .5rem 1.4rem 0.5rem 1.4rem
 
 .clickable-header
   color: #3794de
